[package]
name = "tracing-test"
version = "0.1.0"
authors = ["clux"]
edition = "2018"

[[bin]]
doc = false
name = "blah"
path = "blah.rs"

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
tracing = "0.1.25"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.16"
tracing-opentelemetry = "0.11.0"
opentelemetry = { version = "0.12.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.5.0", features = ["async"] }
